# fontra-rcjk

./: .gitignore  .pre-commit-config.yaml  .prettierrc  CONTRIBUTORS.txt  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  webpack.config.cjs
.github/: dependabot.yml
.github/workflows/: pytest.yml
scripts/: bundler_build_hook.py  update_git_dependencies.py
src-js/projectmanager-rcjk/: landing.html  package.json
src-js/projectmanager-rcjk/src/: landing.js
src/fontra_rcjk/: _version.py  backend_fs.py  backend_mysql.py  base.py  client.py  client_async.py  landing.html  landing.js  projectmanager.py
tests/: test_copy.py  test_font.py  test_misc.py
tests/data/MutatorSansLocationBase.rcjk/: designspace.json
tests/data/MutatorSansLocationBase.rcjk/characterGlyph/: A_.glif  B_.glif
tests/data/MutatorSansLocationBase.rcjk/characterGlyph/MutatorSansBoldCondensed_foreground.db3714ad9ac4/: A_.glif  B_.glif
tests/data/MutatorSansLocationBase.rcjk/characterGlyph/MutatorSansBoldWide_foreground.53eb9954912f/: B_.glif
tests/data/MutatorSansLocationBase.rcjk/characterGlyph/MutatorSansLightCondensed_support.20b935b5a9fb/: A_.glif
tests/data/MutatorSansLocationBase.rcjk/characterGlyph/MutatorSansLightCondensed_support.cro.1347e01e146b/: B_.glif
tests/data/MutatorSansLocationBase.rcjk/characterGlyph/MutatorSansLightWide_foreground.8bb25a79b80b/: A_.glif
tests/data/figArnaud.rcjk/: fontLib.json
tests/data/figArnaud.rcjk/characterGlyph/: a.glif  b.glif  uni0030.glif
