[project]
name = "fontra-rcjk"
description = "A plugin for Fontra, supporting the rcjk file format and the django-robocjk web api"
readme = "README.md"
authors = [
    { name = "Just van Rossum", email = "justvanrossum@gmail.com" }
]
keywords = ["font", "fonts"]
license = {text = "GNU General Public License v3"}
dependencies = ["fontra"]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]


[project.entry-points."fontra.projectmanagers"]
rcjk = "fontra_rcjk.projectmanager:RCJKProjectManagerFactory"


[project.entry-points."fontra.webcontent"]
rcjk = "fontra_rcjk"


[project.entry-points."fontra.filesystem.backends"]
rcjk = "fontra_rcjk.backend_fs:RCJKBackend"


[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"


[tool.setuptools.package-data]
fontra_rcjk = [
    "*.html",
    "*.ico",
    "*.css",
    "*.html",
    "*.js",
    "*.svg",
    "*.woff2",
]


[tool.setuptools_scm]
write_to = "src/fontra_rcjk/_version.py"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
