[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "fontra-rcjk"
description = "A plugin for Fontra, supporting the rcjk file format and the django-robocjk web api"
readme = "README.md"
authors = [
    { name = "Just van Rossum", email = "justvanrossum@gmail.com" }
]
keywords = ["font", "fonts"]
license = {text = "GNU General Public License v3"}
dependencies = ["fontra"]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]


[project.entry-points."fontra.projectmanagers"]
rcjk = "fontra_rcjk.projectmanager:RCJKProjectManagerFactory"


[project.entry-points."fontra.webcontent"]
rcjk = "fontra_rcjk"


[project.entry-points."fontra.filesystem.backends"]
rcjk = "fontra_rcjk.backend_fs:RCJKBackend"


[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''


[tool.hatch.build.targets.wheel]
packages = ["src/fontra_rcjk"]


[tool.hatch.version]
source = "vcs"


[tool.hatch.build.hooks.vcs]
version-file = "src/fontra_rcjk/_version.py"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"
